💄 Fix UI overflow with small widget size

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -92,3 +92,8 @@
   height: 0px;
   min-height: 0px !important;
 }
+
+.scroll-area-w100 .mantine-ScrollArea-viewport > div:nth-of-type(1) {
+  width: 100%;
+  display: inherit !important;
+}
